objects/SBQQ__CustomAction__c.object
<CustomObject>
    <customHelpPage>SBQQ__CustomActionsHelp</customHelpPage>
    <description>Custom action definition.</description>
    <fields>
        <fullName>SBQQ__Action__c</fullName>
        <description>Action that this custom action performs.</description>
        <inlineHelpText>Action that this custom action performs.</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__Location__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add Products</fullName>
                </value>
                <value>
                    <fullName>Add Favorites</fullName>
                </value>
                <value>
                    <fullName>Upgrade Assets</fullName>
                </value>
                <value>
                    <fullName>Renew Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Quick Save</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Calculate</fullName>
                </value>
                <value>
                    <fullName>Delete Lines</fullName>
                </value>
                <value>
                    <fullName>Add Group</fullName>
                </value>
                <value>
                    <fullName>Ungroup</fullName>
                </value>
                <value>
                    <fullName>Add Solution Group</fullName>
                </value>
                <value>
                    <fullName>Reset Discounts</fullName>
                </value>
                <value>
                    <fullName>Optional: All</fullName>
                </value>
                <value>
                    <fullName>Optional: None</fullName>
                </value>
                <value>
                    <fullName>Clone Group</fullName>
                </value>
                <value>
                    <fullName>Delete Group</fullName>
                </value>
                <value>
                    <fullName>Add To Favorites</fullName>
                </value>
                <value>
                    <fullName>Remove From Favorites</fullName>
                </value>
                <value>
                    <fullName>Delete Line</fullName>
                </value>
                <value>
                    <fullName>Clone Line</fullName>
                </value>
                <value>
                    <fullName>Reconfigure Line</fullName>
                </value>
                <value>
                    <fullName>Desegment Line</fullName>
                </value>
                <value>
                    <fullName>Resegment Line</fullName>
                </value>
                <value>
                    <fullName>View Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Launch External</fullName>
                </value>
                <value>
                    <fullName>Clone with Related</fullName>
                </value>
                <value>
                    <fullName>Create Order</fullName>
                </value>
                <value>
                    <fullName>Edit Lines</fullName>
                </value>
                <value>
                    <fullName>Generate Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether this action is used.</description>
        <inlineHelpText>Select the checkbox to make this action available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BrandButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this Custom Action is a Brand Button. Affects styling of un-nested Actions only.</description>
        <inlineHelpText>Indicates this Custom Action is a Brand Button. Affects styling of un-nested Actions only.</inlineHelpText>
        <label>Brand Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Class__c</fullName>
        <description>Css class of the custom action for easy identification on HTML.</description>
        <inlineHelpText>Css class of the custom action for easy identification on HTML.</inlineHelpText>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Choose the behavior for your conditions: All is AND; Any is OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND; Any is OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets action to be the default overriding action.</description>
        <inlineHelpText>Select checkbox to set action as the default overriding action.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description of the Custom Action which will appear when users hover over the button.</description>
        <inlineHelpText>Enter the value for what you want to appear when a user hovers over the Custom Action button.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>The order in which this action display in the UI.</description>
        <inlineHelpText>The order in which this action display in the UI.</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__EventHandlerName__c</fullName>
        <description>Method name for the click handler of this custom action.</description>
        <inlineHelpText>Method name for the click handler of this custom action.</inlineHelpText>
        <label>Event Handler Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconClass__c</fullName>
        <description>CSS class name for the icon of this custom action.</description>
        <inlineHelpText>CSS class name for the icon of this custom action.</inlineHelpText>
        <label>Icon Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Icon__c</fullName>
        <description>Icon for this custom action</description>
        <inlineHelpText>Icon for this custom action</inlineHelpText>
        <label>Icon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3dots</fullName>
                </value>
                <value>
                    <fullName>add</fullName>
                </value>
                <value>
                    <fullName>adduser</fullName>
                </value>
                <value>
                    <fullName>align-justify</fullName>
                </value>
                <value>
                    <fullName>approval</fullName>
                </value>
                <value>
                    <fullName>apps</fullName>
                </value>
                <value>
                    <fullName>arrowdown</fullName>
                </value>
                <value>
                    <fullName>arrowup</fullName>
                </value>
                <value>
                    <fullName>attach</fullName>
                </value>
                <value>
                    <fullName>attention</fullName>
                </value>
                <value>
                    <fullName>attention-circled</fullName>
                </value>
                <value>
                    <fullName>back</fullName>
                </value>
                <value>
                    <fullName>ban</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>builder</fullName>
                </value>
                <value>
                    <fullName>calendar</fullName>
                </value>
                <value>
                    <fullName>cancel</fullName>
                </value>
                <value>
                    <fullName>cancel-circled</fullName>
                </value>
                <value>
                    <fullName>ccw</fullName>
                </value>
                <value>
                    <fullName>center_align_text</fullName>
                </value>
                <value>
                    <fullName>chart</fullName>
                </value>
                <value>
                    <fullName>chat</fullName>
                </value>
                <value>
                    <fullName>check</fullName>
                </value>
                <value>
                    <fullName>chevrondown</fullName>
                </value>
                <value>
                    <fullName>chevronleft</fullName>
                </value>
                <value>
                    <fullName>chevronright</fullName>
                </value>
                <value>
                    <fullName>chevronup</fullName>
                </value>
                <value>
                    <fullName>circle-empty</fullName>
                </value>
                <value>
                    <fullName>clear</fullName>
                </value>
                <value>
                    <fullName>clock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Label__c</fullName>
        <description>Label displayed for this action in the UI.</description>
        <inlineHelpText>Label displayed for this action in the UI.</inlineHelpText>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Products</fullName>
                    <default>true</default>
                    <label>Add Products</label>
                </value>
                <value>
                    <fullName>Add Favorites</fullName>
                </value>
                <value>
                    <fullName>Renew Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Upgrade Assets</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Quick Save</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Reset Discounts</fullName>
                </value>
                <value>
                    <fullName>Optional: All</fullName>
                </value>
                <value>
                    <fullName>Optional: None</fullName>
                </value>
                <value>
                    <fullName>Calculate</fullName>
                </value>
                <value>
                    <fullName>Delete Lines</fullName>
                </value>
                <value>
                    <fullName>Add Group</fullName>
                </value>
                <value>
                    <fullName>Ungroup</fullName>
                </value>
                <value>
                    <fullName>Add Solution Group</fullName>
                </value>
                <value>
                    <fullName>Clone Group</fullName>
                </value>
                <value>
                    <fullName>Delete Group</fullName>
                </value>
                <value>
                    <fullName>Add To Favorites</fullName>
                </value>
                <value>
                    <fullName>Remove From Favorites</fullName>
                </value>
                <value>
                    <fullName>Delete Line</fullName>
                </value>
                <value>
                    <fullName>Clone Line</fullName>
                </value>
                <value>
                    <fullName>Reconfigure Line</fullName>
                </value>
                <value>
                    <fullName>Desegment Line</fullName>
                </value>
                <value>
                    <fullName>Resegment Line</fullName>
                </value>
                <value>
                    <fullName>View Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Launch External</fullName>
                </value>
                <value>
                    <fullName>Edit Lines</fullName>
                </value>
                <value>
                    <fullName>Preview Document</fullName>
                </value>
                <value>
                    <fullName>Generate Document</fullName>
                </value>
                <value>
                    <fullName>Include Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Location__c</fullName>
        <description>Location of this action on the page.</description>
        <inlineHelpText>Location of this action on the page.</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__Page__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Quote/Group</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Configurator</fullName>
                </value>
                <value>
                    <fullName>Quote Panel</fullName>
                </value>
                <value>
                    <fullName>Account Panel</fullName>
                </value>
                <value>
                    <fullName>Contract Panel</fullName>
                </value>
                <value>
                    <fullName>Opportunity Panel</fullName>
                </value>
                <value>
                    <fullName>Order Panel</fullName>
                </value>
                <value>
                    <fullName>Quote Document Panel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PageHandlerName__c</fullName>
        <description>Page name for this custom action.</description>
        <inlineHelpText>Page name for this custom action.</inlineHelpText>
        <label>Page Handler Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Page__c</fullName>
        <description>The page of which to add the custom action.</description>
        <inlineHelpText>The page of which to add the custom action.</inlineHelpText>
        <label>Page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Configurator</fullName>
                </value>
                <value>
                    <fullName>Quote Line Editor</fullName>
                    <default>true</default>
                    <label>Quote Line Editor</label>
                </value>
                <value>
                    <fullName>Quote Detail</fullName>
                </value>
                <value>
                    <fullName>Account Detail</fullName>
                </value>
                <value>
                    <fullName>Contract Detail</fullName>
                </value>
                <value>
                    <fullName>Opportunity Detail</fullName>
                </value>
                <value>
                    <fullName>Order Detail</fullName>
                </value>
                <value>
                    <fullName>Quote Document Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentCustomAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the parent custom action that this action is grouped under.</description>
        <inlineHelpText>Reference to the parent custom action that this action is grouped under.</inlineHelpText>
        <label>Parent Custom Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__CustomAction__c.SBQQ__Type__c</field>
                <operation>equals</operation>
                <value>Menu</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__CustomAction__c</referenceTo>
        <relationshipLabel>Custom Actions</relationshipLabel>
        <relationshipName>Custom_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ReturnURL__c</fullName>
        <description>URL to return to after successful execution. Not applicable to all actions.</description>
        <inlineHelpText>URL to return to after successful execution. Not applicable to all actions.</inlineHelpText>
        <label>Return URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object targeted by this action.</description>
        <inlineHelpText>Object targeted by this action.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Favorite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>UI element that this custom action is rendered as.</description>
        <inlineHelpText>UI element that this custom action is rendered as.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Menu</fullName>
                </value>
                <value>
                    <fullName>Separator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__URLTarget__c</fullName>
        <description>Method of navigating to the URL.</description>
        <inlineHelpText>Method of navigating to the URL.</inlineHelpText>
        <label>URL Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Popup</fullName>
                </value>
                <value>
                    <fullName>Replace Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__URL__c</fullName>
        <description>URL to visit &apos;URL&apos; is selected as the Target Object.</description>
        <inlineHelpText>Specify URL to navigate to. You have access to Line, Group, and Quote record fields dependent on selected location. Examples: http://www.salesforce.com, http://www.yoursite.com/{!Id}, or /{!SBQQ__Quote__c.Name}/{!SBQQ__YourCustomVar__c}</inlineHelpText>
        <label>URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Custom Action</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__Active__c</columns>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>NAME</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Label__c</columns>
        <columns>SBQQ__ParentCustomAction__c</columns>
        <columns>SBQQ__Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Non_empty_URL_for_Save_and_Navigate</fullName>
        <active>true</active>
        <description>Non-empty URL for Save and Navigate Custom Action.</description>
        <errorConditionFormula>AND (ISPICKVAL(SBQQ__Action__c, &quot;Save and Navigate&quot;), ISBLANK( SBQQ__URL__c ))</errorConditionFormula>
        <errorDisplayField>SBQQ__URL__c</errorDisplayField>
        <errorMessage>URL can&apos;t be empty for Custom Action &quot;Save and Navigate&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__URLTarget_for_Save_and_Navigate</fullName>
        <active>true</active>
        <description>URL target needs to be Replace Page for Custom Action &quot;Save and Navigate&quot;</description>
        <errorConditionFormula>ISPICKVAL(SBQQ__Action__c, &quot;Save and Navigate&quot;) &amp;&amp; NOT( ISPICKVAL( SBQQ__URLTarget__c , &quot;Replace Page&quot;) )</errorConditionFormula>
        <errorDisplayField>SBQQ__URLTarget__c</errorDisplayField>
        <errorMessage>URL target needs to be Replace Page for Custom Action &quot;Save and Navigate&quot;</errorMessage>
    </validationRules>
</CustomObject>